--- a/frontend/src/components/Topbar/Topbar.css
+++ b/frontend/src/components/Topbar/Topbar.css
@@ -1,15 +1,15 @@
 .topbar{
     width: 100%;
-    height: 50px;
     background-color: white;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     z-index: 999;
 }
 
 .topbarWrapper{
     height: 100%;
-    padding: 0px 20px;
+    padding: 20px 0px 20px 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,9 +24,14 @@
 .topRight{
     display: flex;
     align-items: center;
-
+    margin-right: 20px;
 }
+
 .topbarIconContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     cursor: pointer;
     margin-right: 10px;
