--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -8,8 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 999;
 }
-
 .sidebar ul {
     display: flex;
     flex-direction: column;
@@ -32,6 +32,11 @@
     font-size: 12px;
     opacity: 0.8;
 }
+.sidebar a{
+    color: #fff;
+    text-decoration: none;
+}
+
 .sidebar li:hover{
     opacity: 1;
 }
