--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,21 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  border-box: box-sizing;
-  border: none;
-  outline: none;
-  font-family: 'Dosis', sans-serif;
-}
-
-body {
-  background: rgb(185,185,255);
-background: linear-gradient(40deg, rgba(185,185,255,1) 42%, rgba(121,168,254,1) 56%, rgba(251,0,255,1) 100%); no-repeat;
-  height: 100vh;
-}
-
-.container {
+.login-form-container {
   max-width: 400px;
   margin: 5rem auto;
   background: #fff;
@@ -30,40 +13,39 @@ h1 {
   text-align: center;
 }
 
-.container form {
+.login-form-container form {
+  display: flex;
+  flex-direction: column;
   margin-top: 2rem;
 }
 
-.container form label {
+.login-form-container form label {
+  font-style: bold !important;
+  font-size: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   text-transform: capitalize;
 }
 
-.container form input {
-  border-bottom: 1px solid grey;
+.login-form-container form input {
   display: block;
   margin: .5rem 0;
   width: 100%;
   padding-bottom: .5rem;
 }
 
+.login-form__btn-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
 .forgot {
+  cursor: pointer;
   text-align: right;
   letter-spacing: .1rem;
   text-transform: capitalize;
-}
-
-button {
-  padding: 1rem 2rem;
-  border-radius: .5rem;
-  width: 100%;
-  margin: 1.5rem 0;
-  color: #fff;
-  background: rgb(185,185,255);
-background: linear-gradient(90deg, rgba(185,185,255,1) 0%, rgba(195,157,255,1) 32%, rgba(251,0,255,1) 100%);
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: .5rem;
-  font-size: 1rem;
 }
 
 .signup {
@@ -76,40 +58,25 @@ background: linear-gradient(90deg, rgba(185,185,255,1) 0%, rgba(195,157,255,1) 3
   margin-top: 1rem;
 }
 
-.social i {
+.social-icon {
   margin: 0 .5rem;
   padding: 1rem;
   border-radius: 50%;
+  cursor: pointer;
   width: 1rem;
 }
 
-.social i:first-child {
+.social .social-icon:first-child {
   background: #4267B2;
   color: #fff;
 }
 
-.social i:nth-child(2) {
+.social .social-icon:nth-child(2) {
   background: #1DA1F2;
   color: #fff;
 }
 
-.social i:last-child {
+.social .social-icon:last-child {
   background: #DB4437;
   color: #fff;
-}
-
-.last-content {
-  margin-top: 10rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.last-content p {
-  padding: 1rem 0;
-}
-
-.last-content .uppercase {
-  text-transform: uppercase;
-  font-weight: 800;
 }
