--- a/frontend/src/components/Table/Table.css
+++ b/frontend/src/components/Table/Table.css
@@ -1,36 +1,42 @@
 .table {
     border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-.table thead tr {
-    background-color: #009879;
-    color: #ffffff;
+    border: none;
+    width: 100%;
+  }
+  
+  .tableRowHeader {
+    background-color: transparent;
+    transition: all 0.25s ease;
+    border-radius: 10px;
+  }
+  
+  .tableHeader {
+    background-color: #f1f1f1;
+    padding: 12px;
+    font-weight: 500;
     text-align: left;
-}
-
-.table th,
-.table td {
-    padding: 12px 15px;
-}
-
-.table tbody tr {
-    border-bottom: thin solid #dddddd;
-}
-
-.table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-
-.table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
-}
+    font-size: 14px;
+    color: #2c3e50;
+  }
+  
+  .tableHeader:first-child {
+    border-top-left-radius: 15px;
+  }
+  
+  .tableHeader:last-child {
+    border-top-right-radius: 15px;
+  }
+  
+  .tableRowItems {
+    cursor: auto;
+  }
+  
+  .tableRowItems:nth-child(odd) {
+    background-color: #f9f9f9;
+  }
+  
+  .tableCell {
+    padding: 12px;
+    font-size: 14px;
+    color: grey;
+  }
