--- a/frontend/src/components/Table/Table.css
+++ b/frontend/src/components/Table/Table.css
@@ -2,6 +2,7 @@
   border-collapse: collapse;
   border: none;
   width: 100%;
+  margin-left: 50px;
 }
 
 .tableRowHeader {
@@ -73,4 +74,8 @@
 .inactiveButton {
   color: #2c3e50;
   background: #f9f9f9;
+}
+
+.customer__no-data{
+  margin-left: 100px;
 }
