--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,5 @@
+/*=== Dashboard ===*/
+
 .charts{
     margin-left: 100px;
     max-width: 90%;
@@ -20,7 +22,6 @@
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
-
 
 @media (max-width: 575.98px) { 
 
