--- a/frontend/src/components/Table/Table.css
+++ b/frontend/src/components/Table/Table.css
@@ -1,8 +1,9 @@
 .table {
   border-collapse: collapse;
   border: none;
-  width: 100%;
-  margin-left: 50px;
+  width: 700px;
+  margin-left: 100px !important;
+  margin-top: 20px;
 }
 
 .tableRowHeader {
