--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,4 +1,4 @@
-.register-form-container{
+.register-form-container {
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -6,14 +6,21 @@
     margin-top: 100px;
     width: 100%;
 }
-.register-form{
+
+.register-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 400px;
 }
-.register-form label{
+
+.register-form label {
     font-weight: bold;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.register-form__error-msg {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
