hide cookie message on login page and now user can click on question mark to view the cookie message

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -81,6 +81,13 @@ h1 {
   margin: 10px 0 0 0;
 }
 
+.close-icon{
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+
 .login-form__error-msg{
     margin-top: 1rem;
 }
